JavascriptAssignment/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>ABS(( TODAY() -  DOB__c)/365)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Date Of Birth</description>
        <inlineHelpText>Date Of Birth</inlineHelpText>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneratePDF__c</fullName>
        <formula>HYPERLINK(&quot;apex/GeneratePDF?id=&quot;+ Id, &quot;PDF&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeneratePDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WifeName__c</fullName>
        <label>WifeName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MaleStudents</fullName>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Class__c</columns>
        <columns>Age__c</columns>
        <columns>Sex__c</columns>
        <columns>Email__c</columns>
        <columns>Married__c</columns>
        <columns>WifeName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sex__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </filters>
        <label>MaleStudents</label>
    </listViews>
    <nameField>
        <displayFormat>STU-{0000}</displayFormat>
        <label>Student Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DateOfBirthValidation</fullName>
        <active>true</active>
        <errorConditionFormula>DOB__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Date of Birth can not be greater than today</errorMessage>
    </validationRules>
</CustomObject>